--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,25 @@
 <style>
 body {
   font-family: helvetica, sans-serif;
+    }
+
+
+
+.fixed-bg {
+    /* The background image */
+    background-image: url("../images/banner4.jpg");
+    /* Set a specified height, or the minimum height for the background image */
+    min-height: 500px;
+    /* Set background image to fixed (don't scroll along with the page) */
+    background-attachment: fixed;
+    /* Center the background image */
+    background-position: center;
+    /* Set the background image to no repeat */
+    background-repeat: no-repeat;
+    /* Scale the background image to be as large as possible */
+    background-size: cover;
 }
-.jumbotron {
-  text-align:center;
-  background-image: url("../images/banner4.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 90%;
-}
+
 h1 { color: #ff0066;
   font-size: 50px;
 }
@@ -21,6 +31,10 @@ small {
   font-size:15px;
 }
 
+h3 {
+  text-align: center;
+  font-size: 45px;
+}
 
 
 
@@ -41,7 +55,7 @@ ul {
   width: 30px;
   text-align: center;
   text-decoration: none;
-  border-radius: 50%;
+  margin: 5px 2px;
 }
 
 .fa:hover {
