--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,13 @@ body {
   font-family: helvetica, sans-serif;
     }
 
+#prelaunchgiveaway {
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin: 30px;
+  padding: 30px;
+
+}
 
 
 .fixed-bg {
@@ -23,11 +30,13 @@ body {
 h1 { color: #ff0066;
   font-size: 50px;
 }
-h2 { color: white;
+
+h2 { color: grey;
   font-size: 30px;
 }
-small {
-  color:white;
+
+h2 small {
+  color: grey;
   font-size:15px;
 }
 
