--- a/css/index.css
+++ b/css/index.css
@@ -3,13 +3,7 @@ body {
   font-family: helvetica, sans-serif;
     }
 
-#prelaunchgiveaway {
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin: 30px;
-  padding: 30px;
 
-}
 
 
 .fixed-bg {
@@ -26,6 +20,23 @@ body {
     /* Scale the background image to be as large as possible */
     background-size: cover;
 }
+
+div.boxshadow {
+  background-color: rgba(255, 255, 255, 0.3);
+  margin: 30px;
+  padding: 30px;
+  box-shadow: 10px 10px 5px rgba(0, 0, 0,0.3);
+  border-radius: 20px;
+}
+
+#prelaunchgiveaway {
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin: 30px;
+  padding: 30px;
+
+}
+
 
 h1 { color: #ff0066;
   font-size: 50px;
