--- a/css/index.css
+++ b/css/index.css
@@ -34,29 +34,30 @@ div.boxshadow {
   background-color: rgba(255, 255, 255, 0.5);
   margin: 30px;
   padding: 30px;
-
 }
 
+  #prelaunchgiveaway img {
+        width: 30%;
+      }
 
-h1 { color: #ff0066;
-  font-size: 50px;
-}
+      h1 { color: #ff0066;
+        font-size: 50px;
+        text-shadow: 2px 2px 4px #000000;
+      }
 
-h2 { color: grey;
-  font-size: 30px;
-}
+      h2 { color: #4d4d4d;
+        font-size: 30px;
+      }
 
-h2 small {
-  color: grey;
-  font-size:15px;
-}
+      small {
+        color: #4d4d4d;
+        font-size:15px;
+      }
 
 h3 {
   text-align: center;
   font-size: 45px;
 }
-
-
 
 p {font-size: 30px;}
 
@@ -69,33 +70,33 @@ ul {
   align: center;
 }
 
-.fa {
-  padding: 20px;
-  font-size: 50px;
-  width: 30px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-}
+        .fa {
+          padding: 20px;
+          font-size: 50px;
+          width: 30px;
+          text-align: center;
+          text-decoration: none;
+          margin: 5px 2px;
+        }
 
-.fa:hover {
-    opacity: 0.7;
-}
+        .fa:hover {
+            opacity: 0.7;
+        }
 
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
+        .fa-facebook {
+          background: #3B5998;
+          color: white;
+        }
 
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
+        .fa-twitter {
+          background: #55ACEE;
+          color: white;
+        }
 
-.fa-pinterest {
-  background: #cb2027;
-  color: white;
-}
+        .fa-pinterest {
+          background: #cb2027;
+          color: white;
+        }
 
 
 
