--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -12,6 +12,7 @@ body {
 }
 h1 { color: #ff0066;
   font-size: 50px;
+  text-align: center;
 }
 h2 { color: white;
   font-size: 30px;
@@ -27,5 +28,8 @@ ul {font-size:25px}
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
+}
+.social-buttons {
+  text-align: center;
 }
 </style>
