--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,6 @@ body {
   font-family: helvetica, sans-serif;
     }
 
-
-
-
 .fixed-bg {
     /* The background image */
     background-image: url("../images/banner4.jpg");
@@ -40,12 +37,15 @@ div.boxshadow {
         width: 30%;
       }
 
-      h1 { color: #ff0066;
+      h1 {
+        color: #ff0066;
         font-size: 50px;
+        text-align: center;
         text-shadow: 2px 2px 4px #000000;
       }
 
-      h2 { color: #4d4d4d;
+      h2 {
+        color: #4d4d4d;
         font-size: 30px;
       }
 
@@ -54,29 +54,32 @@ div.boxshadow {
         font-size:15px;
       }
 
-h3 {
-  text-align: center;
-  font-size: 45px;
+      h3 {
+        text-align: center;
+        font-size: 45px;
 }
 
-p {font-size: 30px;}
+      p {
+        font-size: 30px;}
 
-ul {
+      ul {
   font-size:25px;
   list-style-type: none;
 }
 
-#social-buttons {
-  align: center;
+    #social-buttons {
+        margin: auto;
+        width: fit-content;
 }
 
         .fa {
           padding: 20px;
           font-size: 50px;
-          width: 30px;
+          width: 80px;
+          display: center;
           text-align: center;
           text-decoration: none;
-          margin: 5px 2px;
+          margin: px 2px;
         }
 
         .fa:hover {
@@ -98,9 +101,7 @@ ul {
           color: white;
         }
 
-
-
-
-
-
+          label {
+          margin-bottom: 5px;
+        }
 </style>
