--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -10,18 +10,23 @@ body {
   background-repeat: no-repeat;
   height: 90%;
 }
-h1 { color: #ff0066;
+h1 {
+  color: #ff0066;
   font-size: 50px;
   text-align: center;
 }
-h2 { color: white;
+h2 {
+  color: white;
   font-size: 30px;
 }
-small {color:white;
-font-size:15px;
+small {
+  color:white;
+  font-size:15px;
 }
-p {font-size: 30px;}
-ul {font-size:25px}
+p {
+  font-size: 30px;}
+ul {
+  font-size:25px;}
 
  form {
   width: 100%;
@@ -29,7 +34,7 @@ ul {font-size:25px}
   margin: 8px 0;
   box-sizing: border-box;
 }
-.social-buttons {
-  text-align: center;
+#winners {
+  color: white;
 }
 </style>
