--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
 <style>
-body {
-  font-family: helvetica, sans-serif;
-    }
+  body {
+    font-family: helvetica, sans-serif;
+  }
 
-.fixed-bg {
+  .fixed-bg {
     /* The background image */
     background-image: url("../images/banner4.jpg");
     /* Set a specified height, or the minimum height for the background image */
@@ -16,92 +16,121 @@ body {
     background-repeat: no-repeat;
     /* Scale the background image to be as large as possible */
     background-size: cover;
-}
+  }
 
-div.boxshadow {
-  background-color: rgba(255, 255, 255, 0.3);
-  margin: 30px;
-  padding: 30px;
-  box-shadow: 10px 10px 5px rgba(0, 0, 0,0.3);
-  border-radius: 20px;
-}
+  div.boxshadow {
+    background-color: rgba(255, 255, 255, 0.3);
+    margin: 30px;
+    padding: 30px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0,0.3);
+    border-radius: 20px;
+  }
 
-#prelaunchgiveaway {
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin: 30px;
-  padding: 30px;
-}
+  #prelaunchgiveaway {
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    margin: 30px;
+    padding: 10px;
+  }
 
   #prelaunchgiveaway img {
-        width: 30%;
-      }
+    width: 30%;
+  }
 
-      h1 {
-        color: #ff0066;
-        font-size: 50px;
-        text-align: center;
-        text-shadow: 2px 2px 4px #000000;
-      }
+  h1 {
+    color: #ff0066;
+    font-size: 50px;
+    text-align: center;
+    text-shadow: 2px 2px 4px #000000;
+  }
 
-      h2 {
-        color: #4d4d4d;
-        font-size: 30px;
-      }
+  h2 {
+    color: #4d4d4d;
+    font-size: 30px;
+  }
 
-      small {
-        color: #4d4d4d;
-        font-size:15px;
-      }
+  small {
+    color: #4d4d4d;
+    font-size:15px;
+  }
 
-      h3 {
-        text-align: center;
-        font-size: 45px;
-}
+  h3 {
+    text-align: center;
+    font-size: 45px;
+  }
 
-      p {
-        font-size: 30px;}
+  p {
+    font-size: 30px;
+  }
 
-      ul {
-  font-size:25px;
-  list-style-type: none;
-}
+  ul {
+    font-size:25px;
+    list-style-type: none;
+  }
+  #winners {
+    color: white;
+  }
+  #social-buttons {
+    margin: auto;
+    width: fit-content;
+  }
+  #termsandconditions {
+    text-align:center;
+  }
+  .fa {
+    padding: 20px;
+    font-size: 50px;
+    width: 80px;
+    display: center;
+    text-align: center;
+    text-decoration: none;
+    margin: px 2px;
+  }
 
-    #social-buttons {
-        margin: auto;
-        width: fit-content;
-}
+  .fa:hover {
+    opacity: 0.7;
+  }
 
-        .fa {
-          padding: 20px;
-          font-size: 50px;
-          width: 80px;
-          display: center;
-          text-align: center;
-          text-decoration: none;
-          margin: px 2px;
-        }
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
 
-        .fa:hover {
-            opacity: 0.7;
-        }
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
 
-        .fa-facebook {
-          background: #3B5998;
-          color: white;
-        }
+  .fa-pinterest {
+    background: #cb2027;
+    color: white;
+  }
 
-        .fa-twitter {
-          background: #55ACEE;
-          color: white;
-        }
+  label {
+    margin-bottom: 5px;
+  }
 
-        .fa-pinterest {
-          background: #cb2027;
-          color: white;
-        }
+  .footer {
+      position:fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      background-color:white ;
+      color: white;
+      text-align: center;
+  }
 
-          label {
-          margin-bottom: 5px;
-        }
+  div.ui-btn, input[type="submit"] {
+    border:10px solid black !important;
+    background-color: black !important;
+    text-decoration:none !important;
+    font-family:helvetica !important;
+    font-size: 30px;
+    color: #ff0066 !important;
+  }
+
+  input:hover[type="submit"] {
+			background-color: white !important;
+	}
+
 </style>
