Change Color of Footer
Change Color of Footer

--- a/css/index.css
+++ b/css/index.css
@@ -115,7 +115,7 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      background-color:white ;
+      background-color:grey;
       color: white;
       text-align: center;
   }
