--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
   }
 
   .fixed-bg {
-    background-image: url("https://li-monada.github.io/Li-Ma/images/banner4.jpg");
+    background-image: url("../images/banner4.jpg");
     min-height: 500px;
     background-attachment: fixed;
     background-position: center;
